--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       // Load and register pre-caching Service Worker
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
-          navigator.serviceWorker.register('./service-worker.js', {
+          navigator.serviceWorker.register('tuts-google-maps/service-worker.js', {
             scope: Polymer.rootPath,
           });
         });
@@ -85,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </script>
 
     <!-- Load webcomponents-loader.js to check and load any polyfills your browser needs -->
-    <script src="./bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="tuts-google-maps/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
     <!-- Load your application shell -->
     <link rel="import" href="./src/my-app.html">
