--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       Note: If you intend to serve from a non-root path, see [polymer-root-path] below.
     -->
-    <base href="/">
+    <base href="/tuts-google-maps/">
 
     <link rel="icon" href="images/favicon.ico">
 
@@ -72,12 +72,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       * to indicate the path from which you'll be serving, including leading
       * and trailing slashes (e.g., `/my-app/`).
       */
-      window.Polymer = {rootPath: '/'};
+      window.Polymer = {rootPath: '/tuts-google-maps/'};
 
       // Load and register pre-caching Service Worker
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
-          navigator.serviceWorker.register('tuts-google-maps/service-worker.js', {
+          navigator.serviceWorker.register('service-worker.js', {
             scope: Polymer.rootPath,
           });
         });
@@ -85,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </script>
 
     <!-- Load webcomponents-loader.js to check and load any polyfills your browser needs -->
-    <script src="tuts-google-maps/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="./bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
     <!-- Load your application shell -->
     <link rel="import" href="./src/my-app.html">
