--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       * to indicate the path from which you'll be serving, including leading
       * and trailing slashes (e.g., `/my-app/`).
       */
-      window.Polymer = {rootPath: '/tuts-google-maps'};
+      window.Polymer = {rootPath: '/tuts-google-maps/'};
       //window.Polymer = {rootPath: '/'};
 
       // Load and register pre-caching Service Worker
