--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       Note: If you intend to serve from a non-root path, see [polymer-root-path] below.
     -->
     <base href="/tuts-google-maps/">
-    <!--<base href="/">-->
+    <!--<base href="/">
 
     <link rel="icon" href="images/favicon.ico">
 
