--- a/src/simple-map.html
+++ b/src/simple-map.html
@@ -32,6 +32,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .sub-header {
         border-bottom: 1px solid #ECEBE9;
       }
+      code, pre, .pre-style {
+        background: #f7f7f7;
+        color: #37474f;
+        font: 400 100%/1 Roboto Mono,monospace;
+        padding: 1px 4px;
+      }
     </style>
 
     <div class="card">
@@ -46,6 +52,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="divider">
         <h3 class="sub-header">The Code</h3>
         <iframe width="100%" height="700" src="//jsfiddle.net/neekodev/nxf7pfjg/embedded/html/dark/" allowpaymentrequest allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+        <p>There are few things to note in this code example: </p>
+        <ol>
+          <li>We declare the application as HTML5 using the <code>&lt;!DOCTYPE html&gt;</code> declaration.</li>
+          <li>We create a <code>div</code> element named "map" to hold the map.</li>
+          <li>We define a JavaScript function that creates a map in the <code>div</code>.</li>
+          <li>We load the Maps JavaScript API using a <code>script</code> tag.</li>
+        </ol>
+        <p>Code and steps are explained below.</p>
+        <h4>Declaring your application as HTML5</h4>
       </div>
     </div>
   </template>
