--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       Note: If you intend to serve from a non-root path, see [polymer-root-path] below.
     -->
-    <base href="/tuts-google-maps/">
-    <!--<base href="/">
+    <!--<base href="/tuts-google-maps/">-->
+    <base href="/">
 
     <link rel="icon" href="images/favicon.ico">
 
@@ -73,8 +73,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       * to indicate the path from which you'll be serving, including leading
       * and trailing slashes (e.g., `/my-app/`).
       */
-      window.Polymer = {rootPath: '/tuts-google-maps/'};
-     // window.Polymer = {rootPath: '/'};
+      //window.Polymer = {rootPath: '/tuts-google-maps/'};
+      window.Polymer = {rootPath: '/'};
 
       // Load and register pre-caching Service Worker
       if ('serviceWorker' in navigator) {
