completed simple map tutorial

--- a/src/intro.html
+++ b/src/intro.html
@@ -39,10 +39,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .card {
         color: #74736D;
       }
+
+      .logo-container {
+        padding: 10px;
+        margin-bottom: 10px;
+      }
+
+      img.logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
     </style>
 
     <div class="card">
       <div class="divider">
+        <div class="logo-container">
+          <img class="logo" src="../images/Google_Maps.svg">
+        </div>
         <h1>What are Google Maps?</h1>
         <p>Google Maps is a free web mapping service by Google that provides various types of geographical information. Using Google Maps, one can.</p>
         <ul>
