--- a/src/intro.html
+++ b/src/intro.html
@@ -56,7 +56,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
       <div class="divider">
         <div class="logo-container">
-          <img class="logo" src="../images/Google_Maps.svg">
+          <img class="logo" src="/tuts-google-maps/images/Google_Maps.svg">
         </div>
         <h1>What are Google Maps?</h1>
         <p>Google Maps is a free web mapping service by Google that provides various types of geographical information. Using Google Maps, one can.</p>
