finished basic tutorials for gmap

--- a/src/intro.html
+++ b/src/intro.html
@@ -70,16 +70,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <div class="divider">
         <h1>Audience</h1>
-        <p>This tutorial is meant for all those readers who would like to learn about Google Maps API. After completing this tutorial, you would be able to integrate Google Maps JavaScript API on your webpage.</p>
+        <p>This tutorial is meant for all those readers who would like to learn about Google Maps API. After completing this tutorial, you would be able to integrate Google Maps JavaScript API on your webpage, add a map with a marker, learn all map types, and localize your google map.</p>
       </div>
         
-      <div class="divider">
+      <div>
         <h1>Prerequisites</h1>
-        <p>Before proceeding with this tutorial, you should be familiar with JavaScript and the concepts of object-oriented programming. You should also be familiar with Google Maps from a user's point of view.</p>
-      </div>
-
-      <div class="source">
-        <small>Source: <a href="https://www.tutorialspoint.com/google_maps/index.htm">TutorialsPoint</a></small>
+        <p>Before proceeding with this tutorial, you should be familiar with at least basic HTML, CSS, JavaScript and the concepts of object-oriented programming. You should also be familiar with Google Maps from a user's point of view.</p>
       </div>
     </div>
   </template>
