added download pptx version

--- a/src/all-folks.html
+++ b/src/all-folks.html
@@ -123,6 +123,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <li><a class="link" target="_blank" href="https://www.w3schools.com/graphics/google_maps_intro.asp">w3schools.com/graphics/google_maps_intro.asp</a></li>
         </ul>
       </div>
+      <div class="divider">
+        <h4>PowerPoint Version Download</h4>
+        <ul>
+          <li><a href="/tuts-google-maps/downloads/tuts-google-maps.pptx" download class="link" target="_blank">Google Maps Tutorial</a></li>
+        </ul>
+      </div>
     </div>
   </template>
   <script>
