--- a/src/all-folks.html
+++ b/src/all-folks.html
@@ -114,7 +114,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <li>How to localize your own google map according to what specific language or region.</li>
         </ul>
       </div>
-      <div class="divider">
+      <div>
         <h3>Keep learning. There's more!</h3>
         <h4>Google Maps API Documentation and Tutorials</h4>
         <ul>
@@ -126,7 +126,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="divider">
         <h4>PowerPoint Version Download</h4>
         <ul>
-          <li><a href="/tuts-google-maps/downloads/tuts-google-maps.pptx" download class="link" target="_blank">Google Maps Tutorial</a></li>
+          <li><a href="downloads/tuts-google-maps.pptx" download class="link" target="_blank">Google Maps Tutorial</a></li>
         </ul>
       </div>
     </div>
